# mindeck

./: .gitignore  .prettierrc  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
design/: mindeck-ui.html
docs/: README.md  USER_GUIDE.md  references.md  roadmap.md  status.md
docs/architecture/: agent-apps.md  harness-engine.md  mcp-integration.md  orchestration.md  overview.md  sandbox.md  ui-layout.md
docs/decisions/: agent-app-rationale.md  design-divergences.md
docs/specs/: 2026-03-18-ai-agent-apps-design.md  2026-03-20-ai-agent-apps-plan.md
e2e/: playwright.config.ts  tsconfig.json
e2e/helpers/: fixtures.ts  setup.ts  streaming.ts
e2e/mocks/: tauri-core.ts  tauri-path.ts
e2e/specs/: 01-first-launch.spec.ts  02-providers.spec.ts  03-workspaces.spec.ts  04-chat.spec.ts  05-majordomo.spec.ts  06-agentic-mode.spec.ts  07-skills.spec.ts  08-file-explorer.spec.ts  09-preview-panel.spec.ts  10-agent-apps.spec.ts  11-mcp-servers.spec.ts  12-pane-system.spec.ts  13-observability.spec.ts  14-themes-settings.spec.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  path_guard.rs
src-tauri/src/commands/: apps.rs  audit.rs  chat.rs  events.rs  files.rs  keychain.rs  mcp.rs  memory.rs  mod.rs  observability.rs  provider.rs  sandbox.rs  scripts.rs  shell.rs  skills.rs  stream.rs  workspace.rs
src/app/: App.tsx  globals.css
src/data/: mcp-directory.ts
src/hooks/: useColumnResize.ts  useSlashCommand.ts
src/services/: agent-pool.ts  agent-runner.ts  agentic-loop.ts  conversation.ts  (+15 more)
(+151 files in other folders)
