[package]
name = "mindeck"
version = "0.1.0"
description = "Mindeck — Agent Workflow OS"
authors = []
edition = "2021"

[lib]
name = "mindeck_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
keyring = { version = "3", features = ["apple-native"] }
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"

[patch.crates-io]
tao = { git = "https://github.com/tauri-apps/tao" }
wry = { path = "/tmp/wry-patched" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
